--- a/source/containers.tex
+++ b/source/containers.tex
@@ -9866,6 +9866,7 @@ namespace std {
 
 \rSec3[queue.cons]{Constructors}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 explicit queue(const Container& cont);
 \end{itemdecl}
@@ -9876,6 +9877,7 @@ explicit queue(const Container& cont);
 Initializes \tcode{c} with \tcode{cont}.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 explicit queue(Container&& cont);
 \end{itemdecl}
@@ -9886,6 +9888,7 @@ explicit queue(Container&& cont);
 Initializes \tcode{c} with \tcode{std::move(cont)}.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class InputIterator>
   queue(InputIterator first, InputIterator last);
@@ -9904,6 +9907,7 @@ Initializes \tcode{c} with
 If \tcode{uses_allocator_v<container_type, Alloc>} is \tcode{false}
 the constructors in this subclause shall not participate in overload resolution.
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class Alloc> explicit queue(const Alloc& a);
 \end{itemdecl}
@@ -9914,6 +9918,7 @@ template<class Alloc> explicit queue(const Alloc& a);
 Initializes \tcode{c} with \tcode{a}.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class Alloc> queue(const container_type& cont, const Alloc& a);
 \end{itemdecl}
@@ -9925,6 +9930,7 @@ Initializes \tcode{c} with \tcode{cont} as the first argument and \tcode{a}
 as the second argument.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class Alloc> queue(container_type&& cont, const Alloc& a);
 \end{itemdecl}
@@ -9936,6 +9942,7 @@ Initializes \tcode{c} with \tcode{std::move(cont)} as the first argument and \tc
 as the second argument.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class Alloc> queue(const queue& q, const Alloc& a);
 \end{itemdecl}
@@ -9947,6 +9954,7 @@ Initializes \tcode{c} with \tcode{q.c} as the first argument and \tcode{a} as th
 second argument.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class Alloc> queue(queue&& q, const Alloc& a);
 \end{itemdecl}
@@ -9958,6 +9966,7 @@ Initializes \tcode{c} with \tcode{std::move(q.c)} as the first argument and \tco
 as the second argument.
 \end{itemdescr}
 
+\indexlibraryctor{queue}%
 \begin{itemdecl}
 template<class InputIterator, class Alloc>
   queue(InputIterator first, InputIterator last, const Alloc& alloc);
