--- a/source/strings.tex
+++ b/source/strings.tex
@@ -4179,10 +4179,9 @@ Because \tcode{basic_string_view} refers to a constant sequence, \tcode{iterator
     size_type size_;            // \expos
   };
 
-  // \ref{string.view.deduct}, deduction guide
+  // \ref{string.view.deduct}, deduction guides
   template<class It, class End>
     basic_string_view(It, End) -> basic_string_view<iter_value_t<It>>;
-
   template<class R>
     basic_string_view(R&&) -> basic_string_view<ranges::range_value_t<R>>;
 }
@@ -4299,7 +4298,7 @@ Let \tcode{d} be an lvalue of type \tcode{remove_cvref_t<R>}.
 \begin{itemize}
 \item
 \tcode{R} models
-\tcode{ranges::contiguous_range} and \tcode{ranges::sized_range},
+\tcode{ranges::\libconcept{contiguous_range}} and \tcode{ranges::\libconcept{sized_range}},
 \item
 \tcode{is_same_v<ranges::range_value_t<R>, charT>} is \tcode{true},
 \item
@@ -5021,7 +5020,7 @@ template<class R>
 \begin{itemdescr}
 \pnum
 \constraints
-\tcode{R} satisfies \tcode{ranges::contiguous_range}.
+\tcode{R} satisfies \tcode{ranges::\libconcept{contiguous_range}}.
 \end{itemdescr}
 
 \rSec2[string.view.comparison]{Non-member comparison functions}
