--- a/source/utilities.tex
+++ b/source/utilities.tex
@@ -4065,7 +4065,7 @@ namespace std {
       constexpr explicit variant(in_place_index_t<I>, initializer_list<U>, Args&&...);
 
     // \ref{variant.dtor}, destructor
-    ~variant();
+    constepxr ~variant();
 
     // \ref{variant.assign}, assignment
     constexpr variant& operator=(const variant&);
