--- a/source/utilities.tex
+++ b/source/utilities.tex
@@ -15088,7 +15088,7 @@ namespace std {
     function(nullptr_t) noexcept;
     function(const function&);
     function(function&&) noexcept;
-    template<class F> function(F);
+    template<class F> function(F&&);
 
     function& operator=(const function&);
     function& operator=(function&&);
@@ -15221,27 +15221,45 @@ to an object and a member function pointer.
 
 \indexlibraryctor{function}%
 \begin{itemdecl}
-template<class F> function(F f);
+template<class F> function(F&& f);
 \end{itemdecl}
 
 \begin{itemdescr}
 \pnum
+Let \tcode{FD} be \tcode{decay_t<F>}.
+
+\pnum
 \constraints
-\tcode{F} is Lvalue-Callable\iref{func.wrap.func} for argument types
+\begin{itemize}
+\item
+\tcode{is_same_v<remove_cvref_t<F>, function>} is \tcode{false}, and
+\item
+\tcode{FD} is Lvalue-Callable\iref{func.wrap.func} for argument types
 \tcode{ArgTypes...} and return type \tcode{R}.
+\end{itemize}
+
+\pnum
+\mandates
+\begin{itemize}
+\item
+\tcode{is_copy_constructible_v<FD>} is \tcode{true}, and
+\item
+\tcode{is_constructible_v<FD, F>} is \tcode{true}.
+\end{itemize}
 
 \pnum
 \expects
-\tcode{F} meets the \oldconcept{CopyConstructible} requirements.
+\tcode{FD} meets the \oldconcept{CopyConstructible} requirements.
 
 \pnum
 \ensures
-\tcode{!*this} if any of the following hold:
+\tcode{!*this} is \tcode{true} if any of the following hold:
 \begin{itemize}
 \item \tcode{f} is a null function pointer value.
 \item \tcode{f} is a null member pointer value.
-\item \tcode{F} is a specialization of the \tcode{function} class template, and
-  \tcode{!f}.
+\item \tcode{remove_cvref_t<F>} is
+a specialization of the \tcode{function} class template, and
+\tcode{!f} is \tcode{true}.
 \end{itemize}
 
 \pnum
@@ -15250,16 +15268,17 @@ initialized with \tcode{std::move(f)}.
 
 \pnum
 \throws
-Nothing if \tcode{f} is
+Nothing if \tcode{FD} is
 a specialization of \tcode{reference_wrapper} or
-a function pointer. Otherwise, may throw \tcode{bad_alloc}
-or any exception thrown by \tcode{F}'s copy or move constructor.
+a function pointer type.
+Otherwise, may throw \tcode{bad_alloc} or
+any exception thrown by the initialization of the target object.
 
 \pnum
 \recommended
 Implementations should avoid the use of
 dynamically allocated memory for small callable objects, for example,
-where \tcode{f} is an object holding only a pointer or
+where \tcode{f} refers to an object holding only a pointer or
 reference to an object and a member function pointer.
 \end{itemdescr}
 
