--- a/source/xrefdelta.tex
+++ b/source/xrefdelta.tex
@@ -52,5 +52,9 @@
 \movedxref{forwardlist.modifiers}{forward.list.modifiers}
 \movedxref{forwardlist.ops}{forward.list.ops}
 
+% LWG2818 "::std::" everywhere rule needs tweaking
+\removedxref{fs.req.namespace}
+\movedxref{fs.req.general}{fs.req}
+
 % Deprecated features.
 %\deprxref{old.label}  (if moved to depr.old.label, otherwise use \movedxref)
